--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v4
 
+      - name: Create .env-cmdrc file
+        run: echo "${{ secrets.ENV_CMDRC }}" > .env-cmdrc
+
       # Enable QEMU for ARM64 emulation
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
