--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,18 @@ jobs:
         id: branch
         run: |
           echo "The GITHUB_REF is: $GITHUB_REF"
-          echo "stage=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+
+          if [ "$BRANCH_NAME" = "develop" ]; then
+            echo "stage=dev" >> $GITHUB_ENV
+          elif [ "$BRANCH_NAME" = "main" ]; then
+            echo "stage=prod" >> $GITHUB_ENV
+          else
+            echo "Error: Unsupported branch name '$BRANCH_NAME'. Workflow will now exit."
+            exit 1
+          fi
+
+          echo "Stage set to: $stage"
 
       - name: Get Code
         uses: actions/checkout@v4
@@ -61,9 +72,11 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         run: |
-          docker build --target production --platform linux/arm64 -t $ECR_REGISTRY/dev/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build --target dev --platform linux/arm64 -t $ECR_REGISTRY/dev/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/dev/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "image=$ECR_REGISTRY/dev/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "output - $ECR_REGISTRY/dev/$ECR_REPOSITORY:$IMAGE_TAG"
+
 
           # Inspect the image to check its architecture
           ARCHITECTURE=$(docker inspect --format='{{.Architecture}}' $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG)
