--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,10 +70,10 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         run: |
-          docker build --target development --platform linux/arm64 -t $ECR_REGISTRY/${{steps.vars.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/${{steps.vars.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/${{steps.vars.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "output - $ECR_REGISTRY/${{steps.vars.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker build --target development --platform linux/arm64 -t $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "output - $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
 
 
           # Inspect the image to check its architecture
