--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: ECS Deployment
 
 on:
-  workflow_dispatch:
+  # workflow_dispatch:
   push:
     branches:
       - main
@@ -36,49 +36,48 @@ jobs:
             exit 1
           fi
 
-      - name: Get Code
-        uses: actions/checkout@v4
+      # - name: Get Code
+      #   uses: actions/checkout@v4
 
-      - name: Create .env-cmdrc file
-        run: echo "${{ secrets.ENV_CMDRC }}" > .env-cmdrc
+      # - name: Create .env-cmdrc file
+      #   run: echo "${{ secrets.ENV_CMDRC }}" > .env-cmdrc
 
-      # Enable QEMU for ARM64 emulation
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: linux/arm64
+      # # Enable QEMU for ARM64 emulation
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
+      #   with:
+      #     platforms: linux/arm64
 
-      # Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # # Set up Docker Buildx
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+      # - name: Login to Amazon ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-        run: |
-          docker build --target development --platform linux/arm64 -t $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "output - $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
+      # - name: Build, tag, and push image to Amazon ECR
+      #   id: build-image
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     IMAGE_TAG: ${{ github.sha }}
+      #     ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      #   run: |
+      #     docker build --target development --platform linux/arm64 -t $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
+      #     docker push $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
+      #     echo "image=$ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+      #     echo "output - $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
 
-
-          # Inspect the image to check its architecture
-          ARCHITECTURE=$(docker inspect --format='{{.Architecture}}' $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG)
-          echo "Image architecture: $ARCHITECTURE"
+      #     # Inspect the image to check its architecture
+      #     ARCHITECTURE=$(docker inspect --format='{{.Architecture}}' $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG)
+      #     echo "Image architecture: $ARCHITECTURE"
 
       # - name: Fill in the new image ID in the Amazon ECS task definition
       #   env:
