--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: test branch
         run: |
-          echo "The branch is: ${{ steps.branch.outputs.stage }}"
+          echo "The branch is: ${{ steps.branch.env.stage }}"
 
       # - name: Get Code
       #   uses: actions/checkout@v4
