--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,89 +30,83 @@ jobs:
 
           if [ "$BRANCH_NAME" = "develop" ]; then
             echo "stage=dev" >> $GITHUB_ENV
-            echo "stage=dev" >> $GITHUB_OUTPUT
           elif [ "$BRANCH_NAME" = "main" ]; then
             echo "stage=prod" >> $GITHUB_ENV
-            echo "stage=prod" >> $GITHUB_OUTPUT
           else
             echo "Error: Unsupported branch name '$BRANCH_NAME'. Workflow will now exit."
             exit 1
           fi
-
-      - name: test branch
-        run: |
-          echo "The branch is: ${{ steps.branch.outputs.stage }}"
           echo "The branch is env : ${{ env.stage }}"
 
-      # - name: Get Code
-      #   uses: actions/checkout@v4
+      - name: Get Code
+        uses: actions/checkout@v4
 
-      # - name: Create .env-cmdrc file
-      #   run: echo "${{ secrets.ENV_CMDRC }}" > .env-cmdrc
+      - name: Create .env-cmdrc file
+        run: echo "${{ secrets.ENV_CMDRC }}" > .env-cmdrc
 
-      # # Enable QEMU for ARM64 emulation
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v3
-      #   with:
-      #     platforms: linux/arm64
+      # Enable QEMU for ARM64 emulation
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
 
-      # # Set up Docker Buildx
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Login to Amazon ECR
-      #   id: login-ecr
-      #   uses: aws-actions/amazon-ecr-login@v2
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      # - name: Build, tag, and push image to Amazon ECR
-      #   id: build-image
-      #   env:
-      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     IMAGE_TAG: ${{ github.sha }}
-      #     ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-      #   run: |
-      #     docker build --target development --platform linux/arm64 -t $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
-      #     docker push $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
-      #     echo "image=$ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-      #     echo "output - $ECR_REGISTRY/${{steps.branch.outputs.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        run: |
+          docker build --target development --platform linux/arm64 -t $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "output - $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
 
-      #     # Inspect the image to check its architecture
-      #     ARCHITECTURE=$(docker inspect --format='{{.Architecture}}' $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG)
-      #     echo "Image architecture: $ARCHITECTURE"
+          # Inspect the image to check its architecture
+          ARCHITECTURE=$(docker inspect --format='{{.Architecture}}' $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG)
+          echo "Image architecture: $ARCHITECTURE"
 
-      # - name: Fill in the new image ID in the Amazon ECS task definition
-      #   env:
-      #     CONTAINER_NAME: hotel-job-api
-      #   id: task-def
-      #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-      #   with:
-      #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
-      #     container-name: ${{ env.CONTAINER_NAME }}
-      #     image: ${{ steps.build-image.outputs.image }}
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        env:
+          CONTAINER_NAME: hotel-job-api
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ steps.build-image.outputs.image }}
 
-      # - name: Debug new task definition output
-      #   run: echo ${{ steps.task-def.outputs.task-definition }}
+      - name: Debug new task definition output
+        run: echo ${{ steps.task-def.outputs.task-definition }}
 
-      # - name: Upload new task definition
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: new-task-definition
-      #     path: ${{ steps.task-def.outputs.task-definition }}
+      - name: Upload new task definition
+        uses: actions/upload-artifact@v4
+        with:
+          name: new-task-definition
+          path: ${{ steps.task-def.outputs.task-definition }}
 
-      # - name: Deploy Amazon ECS task definition
-      #   env:
-      #     ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
-      #     ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
-      #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      #   with:
-      #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-      #     service: ${{ env.ECS_SERVICE }}
-      #     cluster: ${{ env.ECS_CLUSTER }}
-      #     wait-for-service-stability: true
+      - name: Deploy Amazon ECS task definition
+        env:
+          ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
+          ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
