--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: env-cmdrc
-          path: .env-cmdrc
+          path: $GITHUB_WORKSPACE/.env-cmdrc
 
       # - name: Get Code
       #   uses: actions/checkout@v4
