--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,16 @@ jobs:
         run: |
           cat .env-cmdrc
           pwd
-
+          - name: Check if .env-cmdrc file exists
+          run: |
+            if [ -f $GITHUB_WORKSPACE/.env-cmdrc ]; then
+              echo ".env-cmdrc file exists!"
+              ls -a $GITHUB_WORKSPACE
+            else
+              echo "Error: .env-cmdrc file not found."
+              exit 1
+            fi
+            
     # Step 3: 다운로드 가능하게 파일 업로드
       - name: Upload ENV.json for download
         uses: actions/upload-artifact@v3
