--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,11 +38,11 @@ jobs:
           fi
 
       - name: Create .env-cmdrc file
-        run: echo "${{ secrets.ENV_CMDRC }}" > .env-cmdrc.json
+        run: echo "${{ secrets.ENV_CMDRC }}" > env-cmdrc.json
 
       - name: View generated ENV.json
         run: |
-          cat .env-cmdrc.json
+          cat env-cmdrc.json
           pwd
 
     # Step 3: 다운로드 가능하게 파일 업로드
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: env-cmdrc
-          path: $GITHUB_WORKSPACE/.env-cmdrc.json
+          path: $GITHUB_WORKSPACE/env-cmdrc.json
 
       # - name: Get Code
       #   uses: actions/checkout@v4
