--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ on:
       - 'test/**'
       - '**.md'
 
+# permissions:
+  # contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -32,7 +35,10 @@ jobs:
           fi
 
       - name: Create .env-cmdrc file
-        run: echo "${{ secrets.ENV_CMDRC }}" > env-cmdrc.json
+        run: |
+          echo "$ENV_CMDRC" > config.json
+        env:
+          ENV_CMDRC: ${{ secrets.ENV_CMDRC }}
 
       - name: View generated ENV.json
         run: |
@@ -43,8 +49,8 @@ jobs:
       - name: Upload ENV.json for download
         uses: actions/upload-artifact@v3
         with:
-          name: env-cmdrc
-          path: $GITHUB_WORKSPACE/env-cmdrc.json
+          name: secret-json
+          path: config.json
 
       # - name: Get Code
       #   uses: actions/checkout@v4
