--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: View generated ENV.json
         run: |
-          cat env-cmdrc.json
+          cat config.json
           pwd
 
     # Step 3: 다운로드 가능하게 파일 업로드
