--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,65 +35,62 @@ jobs:
           fi
 
       - name: Create .env-cmdrc file
-        run: |
-          echo "${{ secrets.ENV_CMDRC }}" > env-cmdrc
-        env:
-          ENV_CMDRC: ${{ secrets.ENV_CMDRC }}
+        run: echo "${{ secrets.ENV_CMDRC }}" > env-cmdrc.json
 
-      - name: View generated ENV.json
-        run: |
-          cat env-cmdrc
-          pwd
+      # - name: View generated ENV.json
+      #   run: |
+      #     cat env-cmdrc
+      #     pwd
 
     # Step 3: 다운로드 가능하게 파일 업로드
-      - name: Upload ENV.json for download
-        uses: actions/upload-artifact@v3
+      # - name: Upload ENV.json for download
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: secret-json
+      #     path: env-cmdrc
+
+      - name: Get Code
+        uses: actions/checkout@v4
+
+      - name: test branch
+        run: |
+          ls -a
+          echo "The branch is env : ${{ env.stage }}"
+
+      # Enable QEMU for ARM64 emulation
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
         with:
-          name: secret-json
-          path: env-cmdrc
+          platforms: linux/arm64
 
-      # - name: Get Code
-      #   uses: actions/checkout@v4
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # - name: test branch
-      #   run: |
-      #     ls -a
-      #     echo "The branch is env : ${{ env.stage }}"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # # Enable QEMU for ARM64 emulation
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v3
-      #   with:
-      #     platforms: linux/arm64
-
-      # # Set up Docker Buildx
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
-
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
-
-      # - name: Login to Amazon ECR
-      #   id: login-ecr
-      #   uses: aws-actions/amazon-ecr-login@v2
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
 
 
-      # - name: Build, tag, and push image to Amazon ECR
-      #   id: build-image
-      #   env:
-      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     IMAGE_TAG: ${{ github.sha }}
-      #     ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-      #   run: |
-      #     docker build --target ${{env.stage}} --platform linux/arm64 -t $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
-      #     docker push $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
-      #     echo "image=$ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-      #     echo "output - $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        run: |
+          docker build --target ${{env.stage}} --platform linux/arm64 -t $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "output - $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
 
       # - name: Create ECS Task Definition JSON
       #   run: |
