--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,19 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v4
 
-      - name: Create .env-cmdrc file
-        run: echo "${{ secrets.ENV_CMDRC }}" > ".env-cmdrc.json"
+      # - name: Create .env-cmdrc file
+      #   run: echo "${{ secrets.ENV_CMDRC }}" > ".env-cmdrc.json"
+
+      - name: Create JSON File
+        id: create-json
+        uses: jsdaniell/create-json@1.1.2
+        with:
+          name: ".env-cmdrc.json"
+          json: ${{ secrets.ENV_CMDRC }}
+
+      - name: Show created JSON file
+        run: |
+          cat secrets.json
 
       - name: test branch
         run: |
