--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - name: test branch
         run: |
           ls -a
-          cat .env-cmdrc.json.json
+          cat .env-cmdrc.json
           echo "The branch is env : ${{ env.stage }}"
 
       # Enable QEMU for ARM64 emulation
