update: task update hi

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,7 +106,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: prod-hotel-${{env.stage}}-api
+          container-name: ${{env.stage}}-hotel-job-api
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Debug new task definition output
