test: task download test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,31 +96,31 @@ jobs:
           --query taskDefinition \
           --region ${{ secrets.AWS_REGION }} \
           | jq -r 'del(
-            .taskDefinitionArn,
-            .requiresAttributes,
-            .compatibilities,
-            .revision,
-            .status,
-            .registeredAt,
-            .registeredBy
-          )' > task-definition.json
+              .taskDefinitionArn,
+              .requiresAttributes,
+              .compatibilities,
+              .revision,
+              .status,
+              .registeredAt,
+              .registeredBy
+            )' > task-definition.json
           # aws ecs describe-task-definition \
           # --task-definition hotel-job-api-${{env.stage}}-task \
           # --query taskDefinition \
           # --region ${{ secrets.AWS_REGION }} > task-definition.json
 
-      - name: Debug Task Definition JSON
-        run: |
-          echo "The content of the Task Definition JSON file is:"
-          cat task-definition.json
+      # - name: Debug Task Definition JSON
+      #   run: |
+      #     echo "The content of the Task Definition JSON file is:"
+      #     cat task-definition.json
 
-      # - name: Fill in the new image ID in the Amazon ECS task definition
-      #   id: task-def
-      #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-      #   with:
-      #     task-definition: task-definition.json
-      #     container-name: ${{env.stage}}-hotel-job-api
-      #     image: ${{ steps.build-image.outputs.image }}
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: ${{env.stage}}-hotel-job-api
+          image: ${{ steps.build-image.outputs.image }}
 
       # - name: Upload new task definition
       #   uses: actions/upload-artifact@v4
