--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:local": "env-cmd -e local nest start --watch",
     "start:dev": "env-cmd -e development nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "env-cmd -e production node dist/main",
+    "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "env-cmd -e $npm_config_env ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration:generate": "npm run typeorm -- migration:generate -d dist/database/typeorm-data-source.js  src/database/migrations/$npm_config_name",
+    "migration:run": "npm run build && npm run typeorm migration:run -- -d dist/database/typeorm-data-source.js",
+    "migration:revert": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,9 +30,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "class-validator": "^0.14.1",
     "env-cmd": "^10.1.0",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -69,5 +78,5 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "packageManager": "pnpm@9.13.2"
+  "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
