feat: 데이터베이스 마이그레이션 파일 삭제 및 migration 명령어 수정

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
-    "migration:generate": "npm run build && env-cmd -e $npm_config_env npm run typeorm -- migration:generate -d dist/database/data-source.js src/database/migrations/$npm_config_name",
-    "migration:run": "npm run build && env-cmd -e $npm_config_env npm run typeorm migration:run -- -d dist/database/data-source.js",
+    "migration:generate": "env-cmd -e $npm_config_env npm run typeorm -- migration:generate -d dist/database/data-source.js src/database/migrations/$npm_config_name && npm run build && ",
+    "migration:run": "env-cmd -e $npm_config_env npm run typeorm migration:run -- -d dist/database/data-source.js",
     "migration:revert": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts"
   },
   "dependencies": {
